--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.fish.devops</groupId>
-	<artifactId>PEDIDO_service</artifactId>
+	<artifactId>pedido_service</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
+
+	<properties>
+		<docker.image.prefix>ianfireman</docker.image.prefix>
+	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -56,5 +60,26 @@
 
 	</dependencies>
 
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.3.6</version>
+				<configuration>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+					<pullNewerImage>false</pullNewerImage>
+				</configuration>
+			</plugin>
+        </plugins>
+    </build>
 
 </project>
