--- a/src/main/logstash/config/logstash.conf
+++ b/src/main/logstash/config/logstash.conf
@@ -31,7 +31,7 @@ filter {
 
 output {
   elasticsearch {
-    hosts => "https://b3ad015d9a506f0b76da452e831ee3e8.us-east-1.aws.found.io"
+    hosts => ["https://b3ad015d9a506f0b76da452e831ee3e8.us-east-1.aws.found.io"]
     user => "elastic"
     password => "9d1VFgPi2zZZ5j4I2HIXFoHY"
     index => "pedidos-service"
